@@ -4,15 +4,17 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.JsonNodeFactory;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.kunling.scheduling.action.compilation.domain.ExecutionNode;
+import com.kunling.scheduling.action.config.ActionModuleDefaults;
 import com.kunling.scheduling.action.definition.application.ActionControlPlaneService;
 import com.kunling.scheduling.action.definition.application.ActionReleaseView;
 import com.kunling.scheduling.action.execution.domain.ExecutionError;
+import com.kunling.scheduling.action.shared.NamedDaemonThreadFactory;
 import com.kunling.scheduling.action.upstream.application.AtomicActionGateway;
 import com.kunling.scheduling.action.upstream.application.AtomicActionOutcome;
 import com.kunling.scheduling.action.upstream.application.AtomicActionRequest;
 import com.kunling.scheduling.action.upstream.application.AtomicActionResult;
 import com.kunling.scheduling.action.upstream.application.UpstreamUnavailableException;
-import jakarta.annotation.PreDestroy;
+import javax.annotation.PreDestroy;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
@@ -34,7 +36,10 @@ public class ExecutionCoordinator {
     private final AtomicActionGateway atomicActionGateway;
     private final ExecutionValueResolver valueResolver;
     private final ExecutionPlanMaterializer planMaterializer;
-    private final ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
+    private final ExecutorService executor = Executors.newFixedThreadPool(
+            ActionModuleDefaults.ACTION_EXECUTION_WORKER_THREADS,
+            new NamedDaemonThreadFactory("action-execution-")
+    );
     private final Map<String, Semaphore> robotLocks = new ConcurrentHashMap<>();
 
     public ExecutionCoordinator(
@@ -92,7 +97,9 @@ public class ExecutionCoordinator {
         Map<String, JsonNode> stepOutputs = new LinkedHashMap<>();
         ObjectNode allOutputs = JsonNodeFactory.instance.objectNode();
         JsonNode lastOutput = null;
-        var materializedNodes = planMaterializer.materialize(release.plan(), execution.input(), execution.context());
+        java.util.List<ExecutionNode> materializedNodes = planMaterializer.materialize(
+                release.plan(), execution.input(), execution.context()
+        );
         if (materializedNodes.size() != execution.resolvedSteps().size()) {
             holdExecution(execution.actionInstanceId(), "MATERIALIZED_PLAN_MISMATCH",
                     "执行实例节点数量与发布计划物化结果不一致。");
@@ -167,7 +174,7 @@ public class ExecutionCoordinator {
 
     private void holdExecution(String actionInstanceId, String code, String message) {
         stateService.holdExecution(actionInstanceId, new ExecutionError(code,
-                message == null || message.isBlank() ? "编排过程出现未分类异常。" : message,
+                message == null || message.trim().isEmpty() ? "编排过程出现未分类异常。" : message,
                 false, false, null, "检查机器人现场状态后人工处置。"));
     }
 
